--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,7 @@
 site_name: Material for MkDocs Template Demo
+site_description: An Demo Site for Material for MkDocs GitHub Template
+site_url: https://oldmanumby.github.io/material-for-mkdocs-template
+
 theme:
   name: material
   features:
@@ -25,6 +28,10 @@ theme:
         name: Switch to Light Mode
       primary: teal
       accent: lime
+
+plugins:
+  - search
+  - blog
 
 extra:
   social:
