--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,20 @@ theme:
 plugins:
   - blog
 
+  # CI=1 mkdocs build
+  - group:
+      enabled: !ENV CI
+      plugins:
+        - git-revision-date-localized
+        - git-committers
+
+  # INSIDERS=1 mkdocs build
+  - group:
+      enabled: !ENV INSIDERS
+      plugins:
+        - optimize
+        - privacy
+        - meta
 
 extra:
   social:
