--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install git+https://${insidersvar}@github.com/squidfunk/mkdocs-material-insiders.git
+      - run: pip install git+https://${insiderssecret}@github.com/squidfunk/mkdocs-material-insiders.git
       - run: mkdocs gh-deploy --force
 env:
-  GH_TOKEN: ${{ secrets.insidersvar }} 
+  GH_TOKEN: ${{ secrets.insiderssecret }} 
