Updated for Insiders

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,11 @@ theme:
       primary: teal
       accent: lime
 
+# If you're not a Material for MkDocs Insider, remove the following plugins:
+# List of plugin go here.
+
 plugins:
+  - search
   - blog
   - meta
 
