--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,5 @@
+# Instructions will go here.
+
 site_name: Material for MkDocs Template Demo
 site_description: An Demo Site for Material for MkDocs GitHub Template
 site_url: https://oldmanumby.github.io/material-for-mkdocs-template
