--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,10 +7,11 @@ site_url: https://oldmanumby.github.io/material-for-mkdocs-template
 theme:
   name: material
   features:
+    - navigation.top
     - navigation.tabs
     - navigation.sections
+    - navigation.indexes
     - toc.integrate
-    - navigation.top
     - search.suggest
     - search.highlight
     - content.tabs.link
