--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ theme:
     - navigation.top
     - navigation.tabs
     - navigation.sections
-    - navigation.indexes
+#    - navigation.indexes
     - toc.integrate
     - search.suggest
     - search.highlight
