--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,7 @@ theme:
 plugins:
   - search
   - blog:
-      archive_date_format: MMMM yyyy
+      archive_date_format: MMM yyyy
       authors_profiles: true
   - meta
   - tags:
