--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,9 @@ plugins:
   - blog:
       archive_date_format: MMM yyyy
       authors_profiles: true
+      pagination_per_page: 10
+      archive_pagination_per_page: 10
+      categories_pagination_per_page: 10
   - meta
   - tags:
       tags_file: blog/tags.md
