--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ theme:
 plugins:
   - search
   - blog:
+      blog_toc: true
       archive_date_format: MMM yyyy
       authors_profiles: true
       pagination_per_page: 10
