--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,4 +78,4 @@ markdown_extensions:
       emoji_generator: !!python/name:materialx.emoji.to_svg
 
 copyright:
-Copyright 2024 by <a href="https://oldmanumby.com" target="_blank" rel="noopener">B.A. Umberger</a>
+  © Copyright 2024 by <a href="https://oldmanumby.com" target="_blank" rel="noopener">B.A. Umberger</a>
