--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,10 @@ theme:
     - navigation.tabs
     - navigation.sections
 #    - navigation.indexes
+    - navigation.instant
+    - navigation.instant.prefetch
+    - navigation.instant.progress
+    - navigation.instant.preview
     - toc.integrate
     - search.suggest
     - search.highlight
@@ -65,6 +69,13 @@ extra:
       link: https://twitter.com/oldmanumby
 
 markdown_extensions:
+  - material.extensions.preview:
+      targets:
+        include:
+          - changelog/index.md
+          - customization.md
+          - insiders/changelog/*
+          - setup/extensions/*
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
