--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,7 @@ theme:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: indigo
-      accent: indigo
+      accent: red
       toggle:
         icon: material/toggle-switch
         name: Switch to dark mode
