--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ theme:
     - navigation.instant
     - navigation.instant.prefetch
     - navigation.instant.progress
-    - navigation.instant.preview
+    #- navigation.instant.preview
     - navigation.tracking
     - navigation.tabs
     - navigation.tabs.sticky
