--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,15 +46,15 @@ theme:
         name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: red
-      accent: red
+      primary: indigo
+      accent: indigo
       toggle:
         icon: material/toggle-switch
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
-      scheme: default
+      scheme: slate
       primary: black
-      accent: red
+      accent: indigo
       toggle:
         icon: material/toggle-switch-off
         name: Switch to system preference
