--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,9 +61,9 @@ theme:
   font:
     text: Roboto
     code: Roboto Mono
-  favicon: material/scroll-text-outline
+  favicon: materialassets/branding/favicon.png
   icon:
-    logo: material/scroll-text-outline
+    logo: materialassets/branding/favicon.png
 
 extra_css:
   - stylesheets/extra.css
