--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,7 +61,7 @@ theme:
   font:
     text: Roboto
     code: Roboto Mono
-  favicon: assets/branding/favicon.svg
+  favicon: assets/branding/favicon.png
   logo: assets/branding/logo.svg
 
 extra_css:
