--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,14 +46,14 @@ theme:
         name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: red
+      primary: custom
       accent: deep orange
       toggle:
         icon: material/toggle-switch
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: red
+      primary: custom
       accent: deep orange
       toggle:
         icon: material/toggle-switch-off
