--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ repo_name: oldmanumby/material-for-mkdocs-template
 repo_url: https://github.com/oldmanumby/material-for-mkdocs-template
 
 # Copyright
-copyright: © Copyright 2024 by <a href="https://oldmanumby.com" target="_blank" rel="noopener">B.A. Umberger</a>.
+copyright: © Copyright 2024 by <a href="https://oldmanumby.com" target="_blank" rel="noopener">B.A. Umberger</a>
 
 # CONFIGURATION
 theme:
