--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,8 +95,9 @@ extra:
 plugins:
   - search
   - blog:
-      blog_toc: true
+      post_url_format: "{categories}/{slug}"
       archive_date_format: MMM yyyy
+      blog_toc: true
       authors_profiles: true
       pagination_per_page: 10
       archive_pagination_per_page: 10
