--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,6 +97,7 @@ plugins:
   - blog:
       post_url_format: "{categories}/{slug}"
       archive_date_format: MMM yyyy
+      post_excerpt: required
       blog_toc: true
       authors_profiles: true
       pagination_per_page: 10
