--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,7 +95,8 @@ extra:
 plugins:
   - search
   - meta
-  - Social
+  - typeset
+  - social
   - blog:
       post_url_format: "{categories}/{slug}"
       archive_date_format: MMM yyyy
