--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,15 +51,15 @@ theme:
         name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: teal
-      accent: green
+      primary: indigo
+      accent: blue
       toggle:
         icon: material/toggle-switch
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: teal
-      accent: green
+      primary: indigo
+      accent: blue
       toggle:
         icon: material/toggle-switch-off
         name: Switch to system preference
