--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,14 +52,14 @@ theme:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: indigo
-      accent: blue
+      accent: indigo
       toggle:
         icon: material/toggle-switch
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: indigo
-      accent: blue
+      primary: black
+      accent: indigo
       toggle:
         icon: material/toggle-switch-off
         name: Switch to system preference
