--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,7 +58,7 @@ theme:
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: black
+      primary: blue grey
       accent: indigo
       toggle:
         icon: material/toggle-switch-off
