--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,14 +51,14 @@ theme:
         name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: indigo
+      primary: amber
       accent: amber
       toggle:
         icon: material/toggle-switch
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: indigo
+      primary: amber
       accent: amber
       toggle:
         icon: material/toggle-switch-off
