--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ theme:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: black
-      accent: indigo
+      accent: red
       toggle:
         icon: material/toggle-switch-off
         name: Switch to system preference
