--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,7 +100,7 @@ extra_css:
 plugins:
   - search:
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
-  - minify:
+#  - minify:
       minify_html: true
   - meta
   - typeset
