--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,7 +151,7 @@ markdown_extensions:
   - pymdownx.snippets
   - pymdownx.superfences
 
-# Page tree
+# MENU TREE
 nav:
   - Home: index.md
   - Blog:
