--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ theme:
     - navigation.tracking
     - navigation.tabs
     - navigation.tabs.sticky
-    - navigation.sections
+    #- navigation.sections
     #- navigation.expand
     - navigation.path
     #- navigation.prune
